# SimplilearnDevOps

./: AGENTS.md  Dockerfile  Hello.java  PEGA_KYC_Reverse_Engineering_Guide.docx  README.md  SKILL.md  brd-template.md  code-renovator-SKILL.md  external-services.md  external-system-extraction.md  flow-extraction.md  frd-output-template.md  frd-template.md  integration-patterns.md  json-bin-structure.md  modernization-planner_14.html  modernization-planner_15.html  pega-developer.md  product-owner.md  qa-tester.md  risk-scoring.md
Deep_Search/: README.md  agent-composition.md  change-history-tracer.md  code-reviewer.prompt.md  context-engine.prompt.md  copilot-instructions.md  cross-repo-linker.md  dead-code-scan.md  deep-search.prompt.md  error-path-tracer.md  impact-assessor.prompt.md  orchestrator.prompt.md  performance-investigation.md  quick-reference.md  recursive-analyzer.prompt.md  security-audit.md  settings.json  setup.md  symbol-resolver.md  test-coverage-scanner.md
Deepsearch Agents/: AGENTS.md  README.md  api-surface-mapper.md  architecture.prompt.md  config-mapper.md  dead-code.prompt.md  debug.prompt.md  explain.prompt.md  librarian.md  migration.prompt.md  performance.prompt.md  quick-reference.md  refactor.prompt.md  security.prompt.md  trace.prompt.md
Mainframe_program/: README.md  SKILL.md  mainframe-analyst.skill
PEGA/: Additional_reverseengg.md  ORCHESTRATOR.md  README.md
PEGA_RULES/: SKILL.md  pega_bin_extractor.py  pega_frd_writer.py  pega_manifest_parser.py  test_extractor.py
Redis_analyser/: README.md  requirements.txt
Skill_Generator/: README.md  app.js  index.html  prompts.js  styles.css
agents/: README.md
claude-dev-intelligence-suite 2/: AGENTS.md  README.md
config/: analysis_config.yaml
pega-re 2/: ARCHITECTURE.md  COPILOT_INTEGRATION.md  EXTRACTED_JARS_GUIDE.md  INSTALL.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  build_package.py  copilot_workflow_example.py  pegare  pyproject.toml  requirements.txt  setup.py
pega-re 2/diagrams/: agent-graph.mermaid
pega-re 2/examples/: example_crd_kyc_run.py  run_full_pipeline.py
pega-re 2/pega_re/: __init__.py  __main__.py  agents.py  auto_dispatcher.py  cli.py  docgen.py  extractor.py  flow.py  graph.py  hierarchy.py  parser.py  tasks.py  ui.py
pega-re 2/skills/pega-doc-synthesizer/: SKILL.md
pega-re 2/skills/pega-extractor/: SKILL.md
pega-re 2/skills/pega-flow-analyzer/: SKILL.md
pega-re 2/skills/pega-hierarchy-mapper/: SKILL.md
pega-re 2/skills/pega-rule-parser/: SKILL.md
pega-re 2/skills/pega-task-extractor/: SKILL.md
pega-re 2/skills/pega-ui-renderer/: SKILL.md
(+331 files in other folders)
